--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "iordaniskostelidis",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://iordaniskostelidis.github.io",
   "dependencies": {
     "@testing-library/dom": "^7.30.3",
     "@testing-library/jest-dom": "^5.11.4",
@@ -17,11 +18,16 @@
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
